--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "next-firebase-starter",
+  "name": "Studio Star",
   "private": true,
   "version": "1.0.0",
-  "author": "Trinity Christiana",
+  "author": "Allison Blumenthal",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
