--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Studio Star",
+  "name": "studio-star",
   "private": true,
   "version": "1.0.0",
   "author": "Allison Blumenthal",
@@ -25,6 +25,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
