--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^5.1.3",
+    "date-fns-tz": "^2.0.0",
     "firebase": "^8.2.0",
+    "moment": "^2.29.4",
     "next": "12.0.7",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
