--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-datepicker": "^4.16.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
@@ -43,7 +44,6 @@
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "postcss": "^8.4.29",
-    "prettier": "^2.4.1",
-    "tailwindcss": "^3.3.3"
+    "prettier": "^2.4.1"
   }
 }
